GitHub/src/objects/Xfinity_Home_Consult__c.object
<CustomObject>
    <description>Used by call center representative for a Xfinity Home</description>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Xfinity Home Consult</relationshipLabel>
        <relationshipName>Xfinity_Home_Consult</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Best_time_to_call__c</fullName>
        <label>Best time to call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Date__c</fullName>
        <label>Consult Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consult_Time__c</fullName>
        <label>Consult Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>08:00 AM - 10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM - 12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM - 02:00 PM</fullName>
                </value>
                <value>
                    <fullName>02:00 PM - 04:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packages__c</fullName>
        <label>Packages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Security </fullName>
                    <default>true</default>
                    <label>Home Security </label>
                </value>
                <value>
                    <fullName>Video Recording </fullName>
                </value>
                <value>
                    <fullName>Smart Thermostat </fullName>
                </value>
                <value>
                    <fullName>Lighting Control </fullName>
                </value>
                <value>
                    <fullName>Access Control (i.e. Door Locks/Garage Door Openers) </fullName>
                </value>
                <value>
                    <fullName>Smoke Detection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_phone__c</fullName>
        <label>Primary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rep_Email__c</fullName>
        <label>Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rep_NTID__c</fullName>
        <label>Rep NTID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Address</label>
        <referenceTo>Customer_Address__c</referenceTo>
        <relationshipLabel>Xfinity Home Consult</relationshipLabel>
        <relationshipName>XH_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Xfinity Home Consult</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>XH Consult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xfinity Home Consult</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Consult_Date_not_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>Consult_Date__c &lt; TODAY()</errorConditionFormula>
        <errorMessage>Error-Consult Date cannot be in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Primary_phone__c ,&quot;^((\\+1)?\\s?\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$&quot;))</errorConditionFormula>
        <errorMessage>Error-Please enter a valid US phone number</errorMessage>
    </validationRules>
</CustomObject>